# Vita3K

patches/dynarmic/: 0001-backend-exception_handler-forward-non-JIT-faults-on-.patch  README.md
patches/dynarmic/src/dynarmic/backend/: exception_handler.h  exception_handler_macos.cpp
tools/i18n/: generate_lang_catalog.py
vita3k/: CMakeLists.txt  interface.cpp
vita3k/app/src/: app_init.cpp
vita3k/config/include/config/: config.h
vita3k/cpu/src/: dynarmic_cpu.cpp
vita3k/emuenv/: CMakeLists.txt
vita3k/emuenv/include/emuenv/: state.h
vita3k/emuenv/src/: emuenv.cpp
vita3k/gui-qt/include/gui-qt/: ctrl_keyboard_filter.h
vita3k/gui-qt/src/: ctrl_keyboard_filter.cpp  game_window.cpp  main_window.cpp
vita3k/kernel/src/: load_self.cpp
vita3k/mem/include/mem/: functions.h
vita3k/mem/src/: mem.cpp
vita3k/modules/SceAudio/: SceAudio.cpp
vita3k/modules/SceAvPlayer/: SceAvPlayer.cpp
vita3k/modules/SceIpmi/: SceIpmi.cpp
vita3k/modules/SceProcessmgr/: SceProcessmgrForDriver.cpp
vita3k/modules/SceShellSvc/: SceShellSvc.cpp
vita3k/nids/include/nids/: nids.inc
vita3k/overlay/: CMakeLists.txt
vita3k/overlay/include/overlay/: translation_overlay.h
vita3k/overlay/src/: translation_overlay.cpp
vita3k/renderer/src/vulkan/: gxm_to_vulkan.cpp  pipeline_cache.cpp  renderer.cpp  scene.cpp  surface_cache.cpp  texture.cpp
vita3k/shader/src/: usse_utilities.cpp
vita3k/translator/: CMakeLists.txt
vita3k/translator/include/translator/: net.h  ocr.h  state.h  types.h
vita3k/translator/src/: backends_stub.cpp  net_deepl.mm  ocr_vision.mm  translator.cpp
(+1 files in other folders)
